ecmascript/parser/tests/typescript-errors/tsc/expressions/propertyAccess/propertyAccessNumericLiterals/input.ts.stderr
error[1085]: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/expressions/propertyAccess/propertyAccessNumericLiterals/input.ts:7:1
  |
7 | 000.toString();
  | ^^^

